# LogicGame

./: .gitignore  CMakeLists.txt  LogicGameEngine.cbp  README.md  appify.bash  main.cpp
cmake_modules/: FindSFML.cmake
old_states/: MainMenuState.cpp  MainMenuState.h
resources/: app_icon.icns
resources/lang/: ru.xml
resources/levels/: 1.txt  levels.xml
src/: Event.h  Game.cpp  Game.h  SharedContext.h  Utilities.h  Window.h
src/Constants/: Colors.cpp  Colors.h  Paths.cpp  Paths.h  Positions.cpp  Positions.h
src/Events/: EventManager.cpp  EventManager.h
src/Exceptions/: NoLevelsFileException.h
src/GUI/: Button.cpp  Button.h  Colors.h  GUI_Element.cpp  GUI_Style.h  RoundedRectangle.cpp  RoundedRectangle.h  Widget.h  WrappingText.cpp  WrappingText.h
src/GUI/Buttons/: Button.cpp  Button.h  RelativeButton.cpp  RelativeButton.h
src/GUI/LevelComponents/: DocumentationBlock.cpp  DocumentationBlock.h  StaticComponentsBlock.cpp  StaticComponentsBlock.h  StaticLogicalComponent.cpp  StaticLogicalComponent.h
src/GUI/LevelComponents/Simulation/: ActingLogicalComponent.cpp  Connector.cpp  Connector.h  Simulation.cpp  Simulation.h
src/GUI/LevelComponents/Simulation/LogicalComponents/: And.h  BaseLogicalComponent.h  Or.h
src/GUI/LogicalComponents/: ActingLogicalComponent.cpp  ActingLogicalComponent.h  Connector.cpp  Connector.h  Input.cpp  Input.h  Simulation.cpp  Simulation.h  StaticLogicalComponent.cpp  StaticLogicalComponent.h  Wire.cpp  Wire.h
src/GUI/Tree/: Node.cpp  Node.h  Tree.cpp  Tree.h
src/Graphics/: Colors.h  WrappingText.cpp  WrappingText.h
src/Graphics/GUI/: Button.cpp  Button.h  ScrollBox.cpp  ScrollBox.h  WrappingText.cpp  WrappingText.h
src/Graphics/LevelComponents/: LevelControls.cpp  LevelControls.h  LevelLayout.cpp  LevelLayout.h
src/Graphics/LevelComponents/DocumentationBlock/: Documentation.cpp  Documentation.h  DocumentationBlock.cpp  DocumentationBlock.h  TruthTable.cpp  TruthTable.h
src/Graphics/LevelComponents/GUI/: Button.cpp  Button.h  LevelControls.cpp  LevelControls.h  LevelResultWindow.cpp  LevelResultWindow.h
src/Graphics/LevelComponents/StaticLogicalComponentsBlock/: StaticComponentsBlock.cpp  StaticComponentsBlock.h  StaticLogicalComponent.cpp  StaticLogicalComponent.h
src/Graphics/Shapes/: RoundedRectangle.cpp  RoundedRectangle.h
src/Levels/: Level.h  LevelManager.h  LevelsLoader.cpp  LevelsLoader.h
src/ResourceManager/: ResourceHolder.cpp  ResourceHolder.h  ResourceManager.h
src/ResourceManager/Resources/: LevelResource.h
src/Resources/: ResourceHolder.cpp  ResourceHolder.h  ResourceManager.h  SmoothTexture.h
src/Resources/Resources/: LevelResource.h
src/Simulation/: SimulationConnectorsManager.cpp  SimulationConnectorsManager.h  SimulationManager.cpp  SimulationManager.h
src/Simulation/Components/: Connector.cpp  Connector.h
src/Simulation/Components/LogicalComponents/: ActingLogicalComponent.cpp  ActingLogicalComponent.h  And.h  BaseLogicalComponent.h  ComponentsDataFactory.cpp  ComponentsDataFactory.h  Not.h  Or.h  Xor.h
src/Simulation/Graphics/: ConnectorShape.cpp  ConnectorShape.h  LogicalComponentShape.cpp  LogicalComponentShape.h  WireShape.cpp  WireShape.h
src/Simulation/Graphics/StaticLogicalComponentsBlock/: StaticComponentsBlock.cpp  StaticComponentsBlock.h  StaticLogicalComponent.cpp  StaticLogicalComponent.h
src/States/: BaseState.h  FetchingLevelsState.cpp  FetchingLevelsState.h  GameCompleteState.cpp  GameCompleteState.h  IntroState.cpp  LevelChooseState.cpp  LevelChooseState.h  LevelResultState.cpp  LevelResultState.h  LevelState.cpp  LevelState.h  MainMenuState.cpp  MainMenuState.h  StateManager.cpp  StateManager.h  TestState.cpp  TestState.h
src/Window/: Window.cpp  Window.h
src_from_book/: Game.cpp  SharedContext.h  Window.cpp
src_from_book/Events/: EventManager.h
src_from_book/GUI/: GUI_Element.h
src_from_book/Resources/: FontManager.h  ResourceManager.h  TextureManager.h
src_from_book/States/: BaseState.h  IntroState.h
src_old/: Event.h  Game.cpp  Game.h
src_old/Events/: EventManager.h
src_old/GUI/: RoundedRectangle.h
src_old/GUI/LevelComponents/: StaticLogicalComponent.h
src_old/GUI/LevelComponents/Simulation/: ActingLogicalComponent.cpp  ActingLogicalComponent.h  Connector.cpp  Connector.h  Simulation.h
src_old/GUI/LevelComponents/Simulation/LogicalComponents/: Or.h
src_old/Resources/: ResourceHolder.cpp  ResourceHolder.h
src_old/States/: BaseState.h  MainMenuState.cpp  MainMenuState.h  StateManager.cpp  StateManager.h
src_old/Window/: Window.cpp  Window.h
src_old/old_states/: LevelState.cpp
